<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <n>lidar_processor</n>
  <version>1.0.0</version>
  <description>
    ROS2 package for real-time semantic and panoptic segmentation of LiDAR point clouds
    using MaskPLS model with LibTorch C++ inference
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>
  
  <author>Your Name</author>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <!-- Message types -->
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Point cloud processing -->
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  
  <!-- Launch dependencies -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  
  <!-- Python dependencies for scripts -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  
  <!-- Testing -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
